--- a/Changes
+++ b/Changes
@@ -13,3 +13,12 @@ Revision history for Running-Commentary
 0.000003  Sat Jul 27 10:35:53 2013
 
     - Worked around 5.018 madness
+
+
+0.000004  Sat Jul 27 12:34:32 2013
+
+    - Reverted to previous behaviour.
+      The workaround was ineffective in some cases
+      and the problem appears to be an actual bug 
+      with lexical scoping inside closures in Perl 5.18.
+
